# sdlLearning

./: .gitignore  Build.md  CMakeLists.txt  Sdl2Learn  Sdl2LearnConfig.h  Sdl2LearnConfig.h.in  main.cpp  videos.txt
